<resources>
    <string name="app_name">Sudoku</string>
    <string name="_0">0</string>
    <string name="back">Back</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mistake_0_3">Mistake:0/3</string>
    <string name="timer">Timer:</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_1">1</string>
    <string name="play_sudoku">Play Sudoku!</string>
    <string name="hint">Hint</string>
    <string name="score_0">Score: 0</string>
    <string name="undo">Undo</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="sudoku">Sudoku</string>
    <string name="challenge_your_brain">Challenge your brain</string>
    <string name="best_time">Best Time:</string>
    <string name="_2024_sudoku">© 2024 Sudoku</string>
</resources>