<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstScreenActivity"
    android:background="@drawable/main_background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sudoku"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/challenge_your_brain"
        android:textColor="#E0F7FA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <View
        android:id="@+id/divider"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:background="@android:color/white"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy"
        android:textSize="18sp"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        android:layout_marginTop="48dp"
        android:padding="12dp"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/easy_record_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/best_time"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintBaseline_toBaselineOf="@id/easy_time"/>

    <TextView
        android:id="@+id/easy_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/easy"
        app:layout_constraintStart_toEndOf="@id/easy_record_text"/>
    <Button
        android:id="@+id/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        android:textSize="18sp"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/easy_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/medium_record_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/best_time"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/medium_time"/>
    <TextView
        android:id="@+id/medium_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/medium"
        app:layout_constraintStart_toEndOf="@id/medium_record_text"/>

    <Button
        android:id="@+id/hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        android:textSize="18sp"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/medium_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/hard_record_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/best_time"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/hard_time"/>
    <TextView
        android:id="@+id/hard_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/hard"
        app:layout_constraintStart_toEndOf="@id/hard_record_text"
        />

    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2024_sudoku"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2095090407853200/8820920769" />

</androidx.constraintlayout.widget.ConstraintLayout>
